--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -34,7 +34,7 @@
 
                     <!--profile image-->
                       <div style="padding-left:10px">
-                        <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                        <div class="profile_image" style="background-image: url({{vm.proPic}})">
                            <div class="pp-top"></div>
                            <div class="pp-Bottom"></div>
                         </div>
