--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -1,5 +1,19 @@
 <div class="card">
-    <ion-item class="item-avatar item-icon-right">
+
+          <ion-item>
+              <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                 <div class="pp-top"></div>
+                 <div class="pp-Bottom"></div>
+              </div>
+              <h2>{{vm.post.post.owner_info.full_name}}
+                  <span style="font-size: 14px;" ng-if="vm.post.post.has_url"> shared a link</span>
+                  <span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span>
+              </h2>
+              <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
+
+          </ion-item>
+
+    <!-- <ion-item class="item-avatar item-icon-right">
         <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
         <h2>{{vm.post.post.owner_info.full_name}}
             <span style="font-size: 14px;" ng-if="vm.post.post.has_url"> shared a link</span>
@@ -7,7 +21,7 @@
         </h2>
         <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
-    </ion-item>
+    </ion-item> -->
 
     <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
         {{vm.post.post.text_body}}
