--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -1,16 +1,27 @@
 <div class="card">
 
           <ion-item>
-              <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
-                 <div class="pp-top"></div>
-                 <div class="pp-Bottom"></div>
-              </div>
-              <h2>{{vm.post.post.owner_info.full_name}}
-                  <span style="font-size: 14px;" ng-if="vm.post.post.has_url"> shared a link</span>
-                  <span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span>
-              </h2>
-              <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
+              <div class="row">
+                <!--profile image-->
+                    <div class="col col-20">
+                        <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                           <div class="pp-top"></div>
+                           <div class="pp-Bottom"></div>
+                        </div>
+                   </div>
 
+                   <div class="col col-80">
+                       <div style="width:100%; padding: 5px 0 0 15px">
+                            <div>
+                                <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
+                                <span style="font-size: 12px" ng-if="vm.post.post.has_url"> shared a link</span>
+                                <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
+                            </div>
+
+                            <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                      </div>
+                 </div>
+              </div>
           </ion-item>
 
     <!-- <ion-item class="item-avatar item-icon-right">
