updated home feed with hexagonal image

--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -10,6 +10,7 @@
                         </div>
                    </div>
 
+               <!--profile name-->
                    <div class="col col-80">
                        <div style="width:100%; padding: 5px 0 0 15px">
                             <div>
@@ -18,6 +19,7 @@
                                 <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
                             </div>
 
+                        <!--date-->
                             <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
                       </div>
                  </div>
