--- a/www/pages/home/post-types/attachment/attachment.html
+++ b/www/pages/home/post-types/attachment/attachment.html
@@ -1,46 +1,72 @@
 <div class="card">
-    <ion-item class="item-avatar item-icon-right" id="home-list-item15">
-        <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
-        <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
-        <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
-    </ion-item>
-    <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-        {{vm.post.post.text_body}}
-    </div>
-    <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
-        <img width="40" ng-src="{{vm.trustSrc(vm.apiurl+'/defaultMedia/document/'+file.attributes.ext+'.svg')}}"> {{file.file_path}}
-    </div>
+        <ion-item>
+            <div class="row">
+              <!--profile image-->
+                  <div class="col col-20">
+                      <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                         <div class="pp-top"></div>
+                         <div class="pp-Bottom"></div>
+                      </div>
+                 </div>
 
+                 <!--profile name-->
+                     <div class="col col-80">
+                         <div style="width:100%; padding: 5px 0 0 15px">
+                              <div>
+                                  <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
+                                  <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
+                              </div>
 
+                          <!--date-->
+                              <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                        </div>
+                   </div>
 
-    <!--if shared post-->
-    <div class="row row-no-padding" ng-if="vm.post.post.isShared">
-        <div class="col col-10"></div>
-        <div class="col col-90">
-            <div class="item item-avatar item-text-wrap">
-                <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
-                <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
-                <p>{{vm.post.shared_post.edit_text_body}}</p>
-            </div>
+            </div>   
+        </ion-item>
+        <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
+            <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
+            <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
+            <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
+
+        </ion-item> -->
+        <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+            {{vm.post.post.text_body}}
         </div>
-    </div><!--if shared post-->
+        <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
+            <img width="40" ng-src="{{vm.trustSrc(vm.apiurl+'/defaultMedia/document/'+file.attributes.ext+'.svg')}}"> {{file.file_path}}
+        </div>
+
+
+
+        <!--if shared post-->
+        <div class="row row-no-padding" ng-if="vm.post.post.isShared">
+            <div class="col col-10"></div>
+            <div class="col col-90">
+                <div class="item item-avatar item-text-wrap">
+                    <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
+                    <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
+                    <p>{{vm.post.shared_post.edit_text_body}}</p>
+                </div>
+            </div>
+        </div><!--if shared post-->
 
 
 
 
-    <div class="item row">
-        <div class="col col-20">
-            <a ng-click="vm.likePost()"><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.post.likes}}</span></div>
-        <div ui-sref="app.tabs.comments" class="col col-20">
-            <a ng-click="vm.goToCommentPage('attachment')"><i class="icon ion-ios-chatbubble" style="font-size:22px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.post.comments}}</span></div>
-        <div class="col col-20">
-            <a href=""><i class="icon ion-android-share-alt" style="font-size:20px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.post.shares}}</span></div>
-        <div class="col col-offset-20 col-20">
-            <a class="item-icon-right" href=""><i class="icon ion-more" style="font-size:20px; vertical-align:middle;"></i></a></div>
-    </div>
+        <div class="item row">
+            <div class="col col-20">
+                <a ng-click="vm.likePost()"><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
+                <span style="font-size:12px"> {{vm.post.post.likes}}</span></div>
+            <div ui-sref="app.tabs.comments" class="col col-20">
+                <a ng-click="vm.goToCommentPage('attachment')"><i class="icon ion-ios-chatbubble" style="font-size:22px; vertical-align:middle;"></i></a>
+                <span style="font-size:12px"> {{vm.post.post.comments}}</span></div>
+            <div class="col col-20">
+                <a href=""><i class="icon ion-android-share-alt" style="font-size:20px; vertical-align:middle;"></i></a>
+                <span style="font-size:12px"> {{vm.post.post.shares}}</span></div>
+            <div class="col col-offset-20 col-20">
+                <a class="item-icon-right" href=""><i class="icon ion-more" style="font-size:20px; vertical-align:middle;"></i></a></div>
+        </div>
 
 </div>
