--- a/www/pages/home/post-types/audio/audio.html
+++ b/www/pages/home/post-types/audio/audio.html
@@ -1,10 +1,36 @@
 <div class="card">
-    <ion-item class="item-avatar item-icon-right" id="home-list-item15">
+
+      <ion-item>
+            <div class="row">
+              <!--profile image-->
+                  <div class="col col-20">
+                      <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                         <div class="pp-top"></div>
+                         <div class="pp-Bottom"></div>
+                      </div>
+                 </div>
+
+             <!--profile name-->
+                 <div class="col col-80">
+                     <div style="width:100%; padding: 5px 0 0 15px">
+                          <div>
+                              <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
+                              <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
+                          </div>
+
+                      <!--date-->
+                          <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                    </div>
+               </div>
+        </div>
+      </ion-item>
+      
+    <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
         <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
         <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
         <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
-    </ion-item>
+    </ion-item> -->
     <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
         {{vm.post.post.text_body}}
     </div>
