updated profile view

--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -18,6 +18,7 @@
         <div ng-if="vm.renderhtmlNow">
           <!--background image-->
 
+  <div id="content">
             <div id="profile-bg" ng-style="{'background-image': 'url({{vm.coverImage}})'}">
 
                 <button class="button button-light button-clear icon icon-right ion-edit" style="padding-right:10px; text-shadow: 1px 3px 6px #000000;"></button>
@@ -25,13 +26,13 @@
 
 
 
-            <div id="content">
+            <!-- <div id="content"> -->
                 <div id="profile-info">
 
                   <div class="row">
 
                       <div style="padding-left:10px">
-                        <div class="profile_image" style="background-image: url({{vm.proPic}})">
+                        <div class="profile_image" style="background-image: url({{vm0.proPic}})">
                            <div class="pp-top"></div>
                            <div class="pp-Bottom"></div>
                         </div>
