--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -16,29 +16,32 @@
 
     <ion-content has-header="true">
         <div ng-if="vm.renderhtmlNow">
-          <!--background image-->
 
-  <div id="content">
+
+
+        <!--background image-->
             <div id="profile-bg" ng-style="{'background-image': 'url({{vm.coverImage}})'}">
-
                 <button class="button button-light button-clear icon icon-right ion-edit" style="padding-right:10px; text-shadow: 1px 3px 6px #000000;"></button>
             </div>
 
 
 
-            <!-- <div id="content"> -->
+            <div id="content">
                 <div id="profile-info">
 
                   <div class="row">
 
                       <div style="padding-left:10px">
-                        <div class="profile_image" style="background-image: url({{vm0.proPic}})">
+                        <div class="profile_image" style="background-image: url({{vm.proPic}})">
                            <div class="pp-top"></div>
                            <div class="pp-Bottom"></div>
                         </div>
+
+                    <!--pro pic edit-->
+                        <button id="pro-pic-edit" class="button button-light button-small button-clear icon ion-camera"></button>
                       </div>
 
-                      <div class="col" style="margin-top:-5px">
+                      <div class="col" style="margin-top:5px">
                           <div>
                               <div id="profile-name"><b>{{vm.user.full_name}}</b></div>
                               <div id="profile-description" ng-if="!vm.userOverview.workTitle == ''"><br> {{vm.userOverview.workTitle}}
@@ -79,13 +82,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
 
 
 
 
 <!-- basic info -->
-              <div class="card" style="margin-top:10px">
+              <div class="card" style="margin-top:-70px">
                 <div class="item item-text-wrap" style="margin-bottom:-10px">
 
                       <!-- <div class="row row-no-padding">
@@ -262,7 +265,7 @@
               </div>
 
 
-
+          </div>
 
   </div>
  </ion-content>
