mid day april 22nd

--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
     <script src="pages/home/profile/profile-ctrl.js"></script>
     <script src="pages/home/profile/profile-factory.js"></script>
     <script src="pages/home/comments/comments-ctrl.js"></script>
+    <script src="pages/code-confirmation/code-confirm-ctrl.js"></script>
     <script src="pages/home/home-ctrl.js"></script>
     <script src="pages/home/home-factory.js"></script>
     <script src="pages/home/post-types/text/text-directive.js"></script>
