--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -43,7 +43,7 @@
 
       <div class="item row">
            <div class="col col-20">
-                 <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.user.profileAvatar}})">
+                 <div class="profile_image" style="background-image: url({{vm.apiurl + vm.user.profileAvatar}})">
                     <div class="pp-top"></div>
                     <div class="pp-Bottom"></div>
                  </div>
