--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -45,6 +45,8 @@
 
         <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-gear-a" style="font-size:20px"></i>Settings</a>
 
+        <a class="item item-icon-left" menu-close ng-click="vm.testSms()"><i class="icon ion-log-out" style="font-size:20px"></i>Test Sms</a>
+
         <a class="item item-icon-left" menu-close ng-click="vm.logout()"><i class="icon ion-log-out" style="font-size:20px"></i>Logout</a>
 
       </ion-list>
