april 22nd evening

--- a/www/pages/notifications/notifications.html
+++ b/www/pages/notifications/notifications.html
@@ -14,7 +14,13 @@
 
   <ion-content padding="true" class="has-header">
 
-
+    <ion-list>
+      <ion-item class="item-avatar">
+        <img ng-src="#">
+        <h2>Omuke like dise tomuk er photo.</h2>
+        <p>2 din age</p>
+      </ion-item>
+    </ion-list>
 
 
   </ion-content>
