--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -49,6 +49,8 @@
       <button ui-sref="signup" class="button button-light button-small button-block button-clear"><b>Create Account<b></button>
       <button ui-sref="forgot-pass" class="button button-light button-small button-block button-clear"><b>Forgot Password?<b></button>
     </div>
+
+    <button class="button button-positive" ui-sref="confirm-code">Code confirm page</button>
     
   </ion-content>
 </ion-view>
