updated home feed

--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -28,7 +28,7 @@
     </ion-segment>
   </div>
 
-  <ion-content padding="true" class="has-tabs-top has-subheader">
+  <ion-content padding="true" class="has-tabs-top">
 
     <ion-refresher
       pulling-text="Pull to refresh..."
@@ -47,7 +47,7 @@
                     <div class="pp-top"></div>
                     <div class="pp-Bottom"></div>
                  </div>
-                
+
           </div>
 
           <div class="col col-80">
