--- a/www/pages/home/post-types/image/image.html
+++ b/www/pages/home/post-types/image/image.html
@@ -1,20 +1,21 @@
 <div class="card">
 
-    <ion-item>
+    <ion-item class="item item-borderless">
+
         <div class="row">
           <!--profile image-->
-              <div class="col col-20">
+              <div>
                   <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
                      <div class="pp-top"></div>
                      <div class="pp-Bottom"></div>
                   </div>
              </div>
 
-             <div class="col col-80">
+             <div class="col">
                  <div style="width:100%; padding: 5px 0 0 15px">
                       <div>
                           <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
-                          <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
+                          <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an image post</span>
                       </div>
 
                   <!--date-->
@@ -24,30 +25,54 @@
         </div>
    </ion-item>
     <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
-        <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
-        <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
-        <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
-
-    </ion-item> -->
-    <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-        {{vm.post.post.text_body}}
-    </div>
-    <div class="item item-image" ng-repeat="image in vm.post.post.files">
-        <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
+              <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
+              <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
+              <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
+        </ion-item> -->
+        
+    <div class="card" style="margin:10px">
+        <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+            {{vm.post.post.text_body}}
+        </div>
+        <div class="item item-image" ng-repeat="image in vm.post.post.files">
+            <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
+        </div>
     </div>
 
 
     <!--if shared post-->
-    <div class="row row-no-padding" ng-if="vm.post.post.isShared">
-        <div class="col col-10"></div>
+    <div class="card"  style="margin:15px">
+      <div class="row" ng-if="vm.post.post.isShared" style="margin:10px">
+        <!--profile image-->
+            <div>
+                <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
+                   <div class="pp-top"></div>
+                   <div class="pp-Bottom"></div>
+                </div>
+           </div>
+
+           <div class="col">
+               <div style="width:100%; padding: 5px 0 0 15px">
+                    <div>
+                        <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
+
+                    </div>
+                <!--date-->
+                    <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                    <p>{{vm.post.shared_post.edit_text_body}}</p>
+              </div>
+          </div>
+      </div>
+        <!-- <div class="col col-10"></div>
         <div class="col col-90">
             <div class="item item-avatar item-text-wrap">
                 <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
                 <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
                 <p>{{vm.post.shared_post.edit_text_body}}</p>
             </div>
-        </div>
-    </div><!--if shared post-->
+        </div> -->
+    </div>
+    <!--if shared post-->
 
 
     <div class="item row">
