--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -1,8 +1,8 @@
 <div class="card">
-      <ion-item>
+      <ion-item class="item item-borderless">
         <div class="row">
           <!--profile image-->
-              <div class="col col-20">
+              <div>
                   <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
                      <div class="pp-top"></div>
                      <div class="pp-Bottom"></div>
@@ -10,7 +10,7 @@
              </div>
 
          <!--profile name-->
-             <div class="col col-80">
+             <div class="col">
                  <div style="width:100%; padding: 5px 0 0 15px">
                       <div>
                           <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
@@ -33,26 +33,54 @@
     <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
         {{vm.post.post.text_body}}
     </div>
-    <div ng-repeat="file in vm.post.post.files">
-        <video ng-if="file.is_active == 2" controls width="100%" ng-poster="{{vm.apiurl+'/uploads/videos/thumbs/'+file.file_path+'.png'}}">
-            <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
-        </video>
-        <video ng-if="file.is_active == 1" ng-click="vm.startThisVideo(this)" controls width="100%" ng-attr-poster="{{vm.apiurl + '/uploads/videos/thumbs/' + file.file_path + '.png'}}">
-            <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
-        </video>
+
+    <div class="card" style="margin:15px">
+        <div ng-repeat="file in vm.post.post.files">
+            <video ng-if="file.is_active == 2" controls width="100%" ng-poster="{{vm.apiurl+'/uploads/videos/thumbs/'+file.file_path+'.png'}}">
+                <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
+            </video>
+            <video ng-if="file.is_active == 1" ng-click="vm.startThisVideo(this)" controls width="100%" ng-attr-poster="{{vm.apiurl + '/uploads/videos/thumbs/' + file.file_path + '.png'}}">
+                <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
+            </video>
+        </div>
     </div>
 
     <!--if shared post-->
-    <div class="row row-no-padding" ng-if="vm.post.post.isShared">
-        <div class="col col-10"></div>
-        <div class="col col-90">
-            <div class="item item-avatar item-text-wrap">
-                <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
-                <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
-                <p>{{vm.post.shared_post.edit_text_body}}</p>
-            </div>
-        </div>
-    </div><!--if shared post-->
+      <div class="class" style="margin:15px">
+          <div class="row" ng-if="vm.post.post.isShared" style="margin:10px">
+
+            <!--profile image-->
+                <div>
+                    <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
+                       <div class="pp-top"></div>
+                       <div class="pp-Bottom"></div>
+                    </div>
+               </div>
+
+               <!--profile name-->
+                   <div class="col">
+                       <div>
+                            <div>
+                                <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
+                                <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a Video post</span>
+                            </div>
+
+                        <!--date-->
+                            <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                            <p>{{vm.post.shared_post.edit_text_body}}</p>
+                      </div>
+                  </div>
+
+              <!-- <div class="col col-90">
+                  <div class="item item-avatar item-text-wrap">
+                      <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
+                      <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
+                      <p>{{vm.post.shared_post.edit_text_body}}</p>
+                  </div>
+              </div> -->
+          </div>
+      </div>
+   <!--if shared post-->
 
 
     <div class="item row">
