--- a/www/pages/home/post-types/attachment/attachment.html
+++ b/www/pages/home/post-types/attachment/attachment.html
@@ -30,12 +30,14 @@
             <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
         </ion-item> -->
-        <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-            {{vm.post.post.text_body}}
-        </div>
-        <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
-            <img width="40" ng-src="{{vm.trustSrc(vm.apiurl+'/defaultMedia/document/'+file.attributes.ext+'.svg')}}"> {{file.file_path}}
-        </div>
+        <div class="card" style="10px">
+            <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+                {{vm.post.post.text_body}}
+            </div>
+            <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
+                <img width="40" ng-src="{{vm.trustSrc(vm.apiurl+'/defaultMedia/document/'+file.attributes.ext+'.svg')}}"> {{file.file_path}}
+            </div>
+        </div>    
 
 
 
