--- a/www/pages/home/post-types/audio/audio.html
+++ b/www/pages/home/post-types/audio/audio.html
@@ -31,21 +31,24 @@
           <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
       </ion-item> -->
-      <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-          {{vm.post.post.text_body}}
-      </div>
-      <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
-          <i class="icon ion-headphone"></i>
-          <audio controls>
-              <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
-          </audio>
+      
+      <div class="card" style="margin:10px">
+          <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+              {{vm.post.post.text_body}}
+          </div>
+          <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
+              <i class="icon ion-headphone"></i>
+              <audio controls>
+                  <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
+              </audio>
+          </div>
       </div>
 
 
 
       <!--if shared post-->
-      <div class="card" style="margin:15px">
-            <div class="row" ng-if="vm.post.post.isShared" style="margin:10px">
+
+        <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
 
               <!--profile image-->
                   <div>
@@ -75,7 +78,7 @@
                     </div>
                 </div> -->
             </div>
-        </div>
+
       <!--if shared post-->
 
 
