--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -30,24 +30,23 @@
         <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
     </ion-item> -->
-    <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-        {{vm.post.post.text_body}}
-    </div>
+      <div class="card" style="margin:15px">
+          <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+              {{vm.post.post.text_body}}
+          </div>
 
-    <div class="card" style="margin:15px">
-        <div ng-repeat="file in vm.post.post.files">
-            <video ng-if="file.is_active == 2" controls width="100%" ng-poster="{{vm.apiurl+'/uploads/videos/thumbs/'+file.file_path+'.png'}}">
-                <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
-            </video>
-            <video ng-if="file.is_active == 1" ng-click="vm.startThisVideo(this)" controls width="100%" ng-attr-poster="{{vm.apiurl + '/uploads/videos/thumbs/' + file.file_path + '.png'}}">
-                <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
-            </video>
-        </div>
-    </div>
+          <div ng-repeat="file in vm.post.post.files">
+              <video ng-if="file.is_active == 2" controls width="100%" ng-poster="{{vm.apiurl+'/uploads/videos/thumbs/'+file.file_path+'.png'}}">
+                  <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
+              </video>
+              <video ng-if="file.is_active == 1" ng-click="vm.startThisVideo(this)" controls width="100%" ng-attr-poster="{{vm.apiurl + '/uploads/videos/thumbs/' + file.file_path + '.png'}}">
+                  <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
+              </video>
+          </div>
+      </div>
 
     <!--if shared post-->
-      <div class="class" style="margin:15px">
-          <div class="row" ng-if="vm.post.post.isShared" style="margin:10px">
+          <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
 
             <!--profile image-->
                 <div>
@@ -79,7 +78,6 @@
                   </div>
               </div> -->
           </div>
-      </div>
    <!--if shared post-->
 
 
